mule-user-guide/v/3.2/quartz-transport-reference.adoc
= Quartz Transport Reference

The Quartz transport provides support for scheduling events and for triggering new events. An inbound quartz endpoint can be used to trigger inbound events that can be repeated, such as every second. Outbound quartz endpoints can be used to schedule an existing event to fire at a later date. Users can create schedules using cron expressions, and events can be persisted in a database.

This transport makes use of the http://www.quartz-scheduler.org/[Quartz Project]. The Quartz site has more generic information about how to work with Quartz.

== About Cron Expressions

A cron expression is a string comprised by six or seven fields separated by white space. Fields can contain any of the allowed values, along with various combinations of the allowed special characters for that field. The fields are as follows:

[width="10",cols="25,25,25,25",options="header"]
|===
|Field Name |Mandatory |Allowed Values |Allowed Special Chars
|Seconds |YES |0-59 |, - * /
|Minutes |YES |0-59 |, - * /
|Hours |YES |0-23 |, - * /
|Day of Month |YES |1-31 |, - * ? / L W C
|Month |YES |1-12 or JAN-DEC |, - * /
|Day of Week |YES |1-7 or SUN-SAT |, - * ? / L C #
|Year |NO |empty, 1970-2099 |, - * /
|===

Cron expressions can be as simple as this:
`* * * * ? *`

or more complex, like this:
`0 0/5 14,18,3-39,52 ? JAN,MAR,SEP MON-FRI 2002-2010`.

Following are some examples:

[width="10",cols="50,50",options="header"]
|===
|Expression |Behavior
|0 0 12 * * ? |Fire at 12pm (noon) every day
|0 15 10 ? * * |Fire at 10:15am every day
|0 15 10 * * ? |Fire at 10:15am every day
|0 15 10 * * ? * |Fire at 10:15am every day
|0 15 10 * * ? 2005 |Fire at 10:15am every day during the year 2005
|0 * 14 * * ? |Fire every minute starting at 2pm and ending at 2:59pm, every day
|0 0/5 14 * * ? |Fire every 5 minutes starting at 2pm and ending at 2:55pm, every day
|===

If you are not familiar with cron syntax, here is a http://www.quartz-scheduler.org/documentation/quartz-1.x/tutorials/crontrigger[good tutorial].

== About Jobs

Jobs perform an action when a time trigger occurs from the Quartz transport. Mule provides a number of jobs for generating and scheduling events. These are detailed below. You can also write your own jobs and hook them in using the custom-job type included with Mule.

== Connector

The Quartz connector is used to configure the default behavior for Quartz endpoints that reference the connector. Note if there is only one Quartz connector configured, all Quartz endpoints will use that connector.

=== Attributes of <connector...>

[width="99a",cols="10a,10a,10a,10a,60a",options="header"]
|===
|Name |Type |Required |Default |Description
|scheduler-ref |string |no |  |Provides an implementation of the Quartz Scheduler interface. If no value is provided, a scheduler is retrieved from the StdSchedulerFactory. If no properties are provided, the getDefaultScheduler method is called. Otherwise, a new factory instance is created using the given properties, and a scheduler is retrieved using the getScheduler method.
|===

=== Child Elements of <connector...>

[width="10",cols="33,33,33",options="header"]
|===
|Name |Cardinality |Description
|factory-property |0..* |Set a property on the factory (see scheduler-ref).
|===

For example:

[source, xml]
----
<?xml version="1.0" encoding="UTF-8"?><mule xmlns="http://www.mulesoft.org/schema/mule/core"      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"      xmlns:spring="http://www.springframework.org/schema/beans"      xmlns:quartz="http://www.mulesoft.org/schema/mule/quartz"      xsi:schemaLocation="       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-2.5.xsd       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.2/mule.xsd       http://www.mulesoft.org/schema/mule/quartz http://www.mulesoft.org/schema/mule/quartz/3.2/mule-quartz.xsd">    <quartz:connector name="quartzConnector1" scheduler-ref="myScheduler">        <quartz:factory-property key="org.quartz.scheduler.instanceName" value="MuleScheduler1"/>        <quartz:factory-property key="org.quartz.threadPool.class" value="org.quartz.simpl.SimpleThreadPool"/>        <quartz:factory-property key="org.quartz.threadPool.threadCount" value="3"/>        <quartz:factory-property key="org.quartz.scheduler.rmi.proxy" value="false"/>        <quartz:factory-property key="org.quartz.scheduler.rmi.export" value="false"/>        <quartz:factory-property key="org.quartz.jobStore.class" value="org.quartz.simpl.RAMJobStore"/>    </quartz:connector>...
----

== Outbound endpoint

An outbound Quartz endpoint allows existing events to be stored and fired at a later time/date. If you are using a persistent event store, the payload of the event must implement java.io.Serializable. You configure an org.quartz.Job implementation on the endpoint to tell it what action to take. Mule has some default jobs, but you can also write your own.

=== Attributes of <outbound-endpoint...>

[width="99",cols="10a,10a,10a,10a,60a",options="header"]
|===
|Name |Type |Required |Default |Description
|jobName |string |no |  |The name to associate with the job on the endpoint. This is only really used internally when storing events.
|cronExpression |string |no |  |The cron expression to schedule events at specified dates/times. This attribute or repeatInterval is required. A cron expression is a string comprised by 6 or 7 fields separated by white space. Fields can contain any of the allowed values, along with various combinations of the allowed special characters for that field. The fields are as follows: Field Name MandatoryAllowed ValuesAllowed Special Chars SecondsYES0-59, - * / MinutesYES0-59, - * / HoursYES0-23, - * / Day of MonthYES1-31, - * ? / L W C MonthYES1-12 or JAN-DEC, - * / Day of WeekYES1-7 or SUN-SAT, - * ? / L C # YearNOempty, 1970-2099, - * / Cron expressions can be as simple as this: * * * * ? * or more complex, like this: 0 0/5 14,18,3-39,52 ? JAN,MAR,SEP MON-FRI 2002-2010 Some examples: 0 0 12 * * ? Fire at 12pm (noon) every day 0 15 10 ? * * Fire at 10:15am every day 0 15 10 * * ? Fire at 10:15am every day 0 15 10 * * ? * Fire at 10:15am every day 0 15 10 * * ? 2005 Fire at 10:15am every day during the year 2005 0 * 14 * * ? Fire every minute starting at 2pm and ending at 2:59pm, every day 0 0/5 14 * * ? Fire every 5 minutes starting at 2pm and ending at 2:55pm, every day
|repeatInterval |long |no |  |The number of milliseconds between two events. This attribute or cronExpression is required.
|repeatCount |integer |no |  |The number of events to be scheduled. This value defaults to -1, which means that the events will be scheduled indefinitely.
|startDelay |long |no |  |The number of milliseconds that will elapse before the first event is fired.
|===

=== Child Elements of <outbound-endpoint...>

[width="10",cols="33,33,33",options="header"]
|===
|Name |Cardinality |Description
|abstract-job |1..1 |A placeholder for Quartz jobs that can be set on the endpoint.
|===

== Inbound endpoint

A Quartz inbound endpoint can be used to generate events. It is most useful when you want to trigger a service at a given interval (or cron expression) rather than have an external event trigger the service.

=== Attributes of <inbound-endpoint...>

[width="99a",cols="10a,10a,10a,10a,60a",options="header"]
|===
|Name |Type |Required |Default |Description
|jobName |string |no |  |The name to associate with the job on the endpoint. This is only really used internally when storing events.
|cronExpression |string |no |  |The cron expression to schedule events at specified dates/times. This attribute or repeatInterval is required. A cron expression is a string comprised by 6 or 7 fields separated by white space. Fields can contain any of the allowed values, along with various combinations of the allowed special characters for that field. The fields are as follows: Field Name MandatoryAllowed ValuesAllowed Special Chars SecondsYES0-59, - * / MinutesYES0-59, - * / HoursYES0-23, - * / Day of MonthYES1-31, - * ? / L W C MonthYES1-12 or JAN-DEC, - * / Day of WeekYES1-7 or SUN-SAT, - * ? / L C # YearNOempty, 1970-2099, - * / Cron expressions can be as simple as this: * * * * ? * or more complex, like this: 0 0/5 14,18,3-39,52 ? JAN,MAR,SEP MON-FRI 2002-2010 Some examples: 0 0 12 * * ? Fire at 12pm (noon) every day 0 15 10 ? * * Fire at 10:15am every day 0 15 10 * * ? Fire at 10:15am every day 0 15 10 * * ? * Fire at 10:15am every day 0 15 10 * * ? 2005 Fire at 10:15am every day during the year 2005 0 * 14 * * ? Fire every minute starting at 2pm and ending at 2:59pm, every day 0 0/5 14 * * ? Fire every 5 minutes starting at 2pm and ending at 2:55pm, every day
|repeatInterval |long |no |  |The number of milliseconds between two events. This attribute or cronExpression is required.
|repeatCount |integer |no |  |The number of events to be scheduled. This value defaults to -1, which means that the events will be scheduled indefinitely.
|startDelay |long |no |  |The number of milliseconds that will elapse before the first event is fired.
|===

=== Child Elements of <inbound-endpoint...>

[width="10",cols="33,33,33",options="header"]
|===
|Name |Cardinality |Description
|abstract-job |1..1 |A placeholder for Quartz jobs that can be set on the endpoint.
|===

== Endpoint

A global endpoint that can be used as a template to create inbound and outbound Quartz endpoints. Common configuration can be set on a global endpoint and then referenced using the @ref attribute on the local endpoint. Note that because jobs sometimes only work on inbound or outbound endpoints, they have to be set on the local endpoint.

=== Attributes of <endpoint...>

[width="99a",cols="10a,10a,10a,10a,60a",options="header"]
|===
|Name |Type |Required |Default |Description
|stateful |boolean |no |  |Determines if the job is persistent. If so, the job detail state will be persisted for each request. More importantly, each job triggered will execute sequentially. If the Job takes longer than the next trigger the next job will wait for the current job to execute.
|jobName |string |no |  |The name to associate with the job on the endpoint. This is only really used internally when storing events.
|cronExpression |string |no |  |The cron expression to schedule events at specified dates/times. This attribute or repeatInterval is required. A cron expression is a string comprised by 6 or 7 fields separated by white space. Fields can contain any of the allowed values, along with various combinations of the allowed special characters for that field. The fields are as follows: Field Name MandatoryAllowed ValuesAllowed Special Chars SecondsYES0-59, - * / MinutesYES0-59, - * / HoursYES0-23, - * / Day of MonthYES1-31, - * ? / L W C MonthYES1-12 or JAN-DEC, - * / Day of WeekYES1-7 or SUN-SAT, - * ? / L C # YearNOempty, 1970-2099, - * / Cron expressions can be as simple as this: * * * * ? * or more complex, like this: 0 0/5 14,18,3-39,52 ? JAN,MAR,SEP MON-FRI 2002-2010 Some examples: 0 0 12 * * ? Fire at 12pm (noon) every day 0 15 10 ? * * Fire at 10:15am every day 0 15 10 * * ? Fire at 10:15am every day 0 15 10 * * ? * Fire at 10:15am every day 0 15 10 * * ? 2005 Fire at 10:15am every day during the year 2005 0 * 14 * * ? Fire every minute starting at 2pm and ending at 2:59pm, every day 0 0/5 14 * * ? Fire every 5 minutes starting at 2pm and ending at 2:55pm, every day
|repeatInterval |long |no |  |The number of milliseconds between two events. This attribute or cronExpression is required.
|repeatCount |integer |no |  |The number of events to be scheduled. This value defaults to -1, which means that the events will be scheduled indefinitely.
|startDelay |long |no |  |The number of milliseconds that will elapse before the first event is fired.
|===

=== Child Elements of <endpoint...>

[width="10",cols="33,33,33",options="header"]
|===
|Name |Cardinality |Description
|abstract-job |0..1 |A placeholder for Quartz jobs that can be set on the endpoint.
|===

== Abstract job

A placeholder for Quartz jobs that can be set on the endpoint.

=== Attributes of <abstract-job...>

[width="99a",cols="10a,10a,10a,10a,60a",options="header"]
|===
|Name |Type |Required |Default |Description
|groupName |string |no |  |The group name of the scheduled job
|jobGroupName |string |no |  |The job group name of the scheduled job.
|===

=== Child Elements of <abstract-job...>

[width="10",cols="33,33,33",options="header"]
|===
|Name |Cardinality |Description
|===

== Abstract inbound job

A placeholder for Quartz jobs that can be set on inbound endpoints only.

=== Attributes of <abstract-inbound-job...>

[width="99a",cols="10a,10a,10a,10a,60a",options="header"]
|===
|Name |Type |Required |Default |Description
|groupName |string |no |  |The group name of the scheduled job
|jobGroupName |string |no |  |The job group name of the scheduled job.
|===

=== Child Elements of <abstract-inbound-job...>

[width="10",cols="33,33,33",options="header"]
|===
|Name |Cardinality |Description
|===

== Event generator job

An inbound endpoint job that will trigger a new event for the service according to the schedule on the endpoint. This is useful for periodically triggering a service without the need for an external event to occur.

=== Attributes of <event-generator-job...>

[width="99a",cols="10a,10a,10a,10a,60a",options="header"]
|===
|Name |Type |Required |Default |Description
|groupName |string |no |  |The group name of the scheduled job
|jobGroupName |string |no |  |The job group name of the scheduled job.
|===

=== Child Elements of <event-generator-job...>

[width="10",cols="33,33,33",options="header"]
|=====
|Name |Cardinality |Description
|payload |0..1 |The payload of the newly created event. The payload can be a reference to a file, fixed string, or object configured as a Spring bean. If this value is not set, an event will be generated with an org.mule.transport.NullPayload instance.
|=====

////
Example:

image:/documentation-3.2/images/icons/arrow_closed_active_16.gif[image] Click here to expand...

[source, xml]
----
<flow name="testService1">  <!--  This configuration creates an inbound event for testService1 at 12 noon every day. The event payload always has the value 'foo'.  -->    <quartz:inbound-endpoint name="qEP1" cronExpression="0 0 12 * * ?" jobName="job1" connector-ref="quartzConnector1">      <quartz:event-generator-job>        <quartz:payload>foo</quartz:payload>      </quartz:event-generator-job>    </quartz:inbound-endpoint>    <echo-component/></flow><flow name="testService2">  <!--  This configuration creates an inbound event for testService2 every 1 second indefinitely. The event payload always has the same value, which the are contents of the file 'payload-data.txt'. The file can be on the classpath or on the local file system.  -->    <quartz:inbound-endpoint name="qEP2" repeatCount="10" repeatInterval="1000" jobName="job2"          connector-ref="quartzConnector1">      <quartz:event-generator-job >        <quartz:payload file="payload-data.txt"/>      </quartz:event-generator-job>    </quartz:inbound-endpoint>    <echo-component/></flow>
----
////

== Endpoint polling job

An inbound endpoint job that can be used to periodically read from an external source (via another endpoint). This can be useful for triggering time-based events from sources that do not support polling or for simply controlling the rate in which events are received from the source.

=== Attributes of <endpoint-polling-job...>

[width="99a",cols="10a,10a,10a,10a,60a",options="header"]
|===
|Name |Type |Required |Default |Description
|groupName |string |no |  |The group name of the scheduled job
|jobGroupName |string |no |  |The job group name of the scheduled job.
|===

=== Child Elements of <endpoint-polling-job...>

[width="10",cols="33,33,33",options="header"]
|=====
|Name |Cardinality |Description
|job-endpoint |0..1 |A reference to another configured endpoint from which events will be received.
|=====
////
Example:

image:/documentation-3.2/images/icons/arrow_closed_active_16.gif[image] Click here to expand...

[source, xml]
----
<flow name="testService5">  <!--  The endpoint polling Job tries to perform a 'request' on a Mule endpoint. If a result is received, it hands off to the 'testService5' service for processing. The trigger fires every 5 minutes starting at 2 pm and ending at 2:55 pm, every day. During this period, the job checks the file directory /N/drop-data/in every 5 minutes to see if event data is available. The request times out after 4 seconds if there are no files in the directory.   -->    <quartz:inbound-endpoint name="qEP5" cronExpression="0 0/5 14 * * ?" jobName="job5"           connector-ref="quartzConnector1">      <quartz:endpoint-polling-job>        <quartz:job-endpoint address="file:///N/drop-data/in" timeout="4000"/>      </quartz:endpoint-polling-job>    </quartz:inbound-endpoint>    <echo-component/></flow>
----
////
== Scheduled dispatch job

An outbound job that will schedule a job for dispatch at a later time/date. The event will get dispatched using the configured endpoint reference.

=== Attributes of <scheduled-dispatch-job...>

[width="99a",cols="10a,10a,10a,10a,60a",options="header"]
|===
|Name |Type |Required |Default |Description
|groupName |string |no |  |The group name of the scheduled job
|jobGroupName |string |no |  |The job group name of the scheduled job.
|===

=== Child Elements of <scheduled-dispatch-job...>

[width="10",cols="33,33,33",options="header"]
|===
|Name |Cardinality |Description
|job-endpoint |0..1 |The endpoint used to dispatch the scheduled event. The preferred approach is to create a global endpoint and reference it using the ref attribute. However, you can also use the address attribute to define a URI endpoint (which supports expressions). You can use the timeout attribute to specify an arbitrary time-out value associated with the endpoint that can be used by jobs that block waiting to receive events.
|===
////
For example:

image:/documentation-3.2/images/icons/arrow_closed_active_16.gif[image] Click here to expand...

[source, xml]
----
<flow name="testService6">  <!--  This outbound Quartz endpoint receives an event after the component has processed it and stores it in the event store. When the trigger kicks in at 10:15 am everyday it dispatches the event on the endpoint referenced as 'scheduledDispatchEndpoint'. Since the 'repeatCount' is set to 0, the event is only sent out once.  -->  <inbound-endpoint address="test://inbound6"/>  <test:component/>      <quartz:outbound-endpoint name="qEP6" repeatCount="0" cronExpression="0 15 10 * * ? *"                                            jobName="job6" connector-ref="quartzConnector1">        <quartz:scheduled-dispatch-job>          <quartz:job-endpoint ref="scheduledDispatchEndpoint"/>        </quartz:scheduled-dispatch-job>      </quartz:outbound-endpoint>    </flow
----
////
== Custom job

A custom job can be configured on inbound or outbound endpoints. You can create and configure your own job implementation and use it on a Quartz endpoint. A custom job can be configured as a bean in the XML configuration and referenced using this job.

=== Attributes of <custom-job...>

[width="99a",cols="10a,10a,10a,10a,60a",options="header"]
|===
|Name |Type |Required |Default |Description
|groupName |string |no |  |The group name of the scheduled job
|jobGroupName |string |no |  |The job group name of the scheduled job.
|job-ref |string |yes |  |The bean name or ID of the custom job to use when this job gets executed.
|===

=== Child Elements of <custom-job...>

[width="10",cols="33,33,33",options="header"]
|===
|Name |Cardinality |Description
|===

////
Example:

image:/documentation-3.2/images/icons/arrow_closed_active_16.gif[image] Click here to expand...

[source, xml]
----
<flow name="testService5">  <!--  The endpoint polling Job tries to perform a 'request' on a Mule endpoint. If a result is received, it hands off to the 'testService5' service for processing. The trigger fires every 5 minutes starting at 2 pm and ending at 2:55 pm, every day. during this period the job checks the file directory /N/drop-data/in every 5 minutes to see if any event data is available. The request times out after 4 seconds if there are no files in the directory.  -->    <quartz:inbound-endpoint name="qEP5" cronExpression="0 0/5 14 * * ?" jobName="job5"                                         connector-ref="quartzConnector1">      <quartz:endpoint-polling-job>        <quartz:job-endpoint address="file:///N/drop-data/in" timeout="4000"/>      </quartz:endpoint-polling-job>    </quartz:inbound-endpoint>    <echo-component/></flow>
----

////
== Custom job from message

Allows a job to be stored on the current message. This can only be used on outbound endpoints. When the message is received, the job is read and the job is added to the scheduler with the current message. This allows for custom scheduling behavior determined by the message itself. Usually the service or a transformer would create the job on the message based on application-specific logic. Any Mule-supported expressions can be used to read the job from the message. Typically, you add the job as a header, but an attachment could also be used.

=== Attributes of <custom-job-from-message...>

[width="99a",cols="10a,10a,10a,10a,60a",options="header"]
|===
|Name |Type |Required |Default |Description
|groupName |string |no |  |The group name of the scheduled job
|jobGroupName |string |no |  |The job group name of the scheduled job.
|===

=== Child Elements of <custom-job-from-message...>

[width="10",cols="33,33,33",options="header"]
|===
|Name |Cardinality |Description
|===

////
Example:

image:/documentation-3.2/images/icons/arrow_closed_active_16.gif[image] Click here to expand...

[source, xml]
----
<flow name="testService3">  <!--  This configuration processes a message and finds a Job configured as a header called 'jobConfig' on the current message. We're using the test component here, but a real implementation needs to set a custom {{org.quartz.Job}} implementation as a header on the current message. Note: You can use other expressions to extract the job from an attachment or even a property within the payload itself.  -->  <inbound-endpoint address="test://inbound3"/>  <test:component/>      <quartz:outbound-endpoint name="qEP3" repeatInterval="1000" jobName="job3"                                          connector-ref="quartzConnector1">        <quartz:custom-job-from-message evaluator="header" expression="jobConfig"/>      </quartz:outbound-endpoint></flow>
----
